test: keep paimon primary key tests java 8 compatible